noinst_LIBRARIES = libchecker.a

libchecker_a_SOURCES =ActionAssign.cc    bitreader.h          DefaultGuidance.h    model.cc            repair.h\
ActionAssign.h     bitwriter.cc         dmodel.cc            model.h             rparser.cc\
Action.cc          bitwriter.h          dmodel.h             normalizer.cc       rparser.h\
ActionEQ1.cc       catcherror.c         dparser.cc           normalizer.h        set.cc\
ActionEQ1.h        catcherror.h         dparser.h            omodel.cc           set.h\
ActionGEQ1.cc      classlist.h          element.cc           omodel.h            SimpleHash.cc\
ActionGEQ1.h       cmemory.h            element.h            oparser.cc          SimpleHash.h\
Action.h           cmodel.cc            fieldcheck.cc        oparser.h           stack.c\
ActionInSet.cc     cmodel.h             fieldcheck.h         processabstract.cc  stack.h\
ActionInSet.h      common.cc            processabstract.h   test.cc\
ActionNormal.cc    common.h             file.h               processconcrete.cc  test.h\
ActionNormal.h     cparser.cc           GenericHashtable.cc  processconcrete.h   tmap.cc\
ActionNotInSet.cc  cparser.h            GenericHashtable.h   processobject.cc    tmap.h\
ActionNotInSet.h   Guidance.cc          processobject.h     tmodel.cc\
amodel.cc          DefaultGuidance2.cc  Guidance.h           redblack.c          tmodel.h\
amodel.h           DefaultGuidance2.h   Hashtable.cc         redblack.h          token.cc\
aparser.cc         DefaultGuidance3.cc  Hashtable.h          Relation.cc         token.h\
aparser.h          DefaultGuidance3.h   list.cc              Relation.h          typeparser.cc\
bitreader.cc       DefaultGuidance.cc   list.h               repair.cc           typeparser.h
